tests/ui/match/match-2024-references-fail.stderr
error[E0308]: mismatched types
  --> $DIR/match-2024-references-fail.rs:2:17
   |
LL |     if let Some(&x) = Some(0) {
   |                 ^^    ------- this expression has type `Option<{integer}>`
   |                 |
   |                 expected integer, found `&_`
   |
   = note:   expected type `{integer}`
           found reference `&_`
help: consider removing `&` from the pattern
   |
LL |     if let Some(x) = Some(0) {
   |                 ~

error[E0308]: mismatched types
  --> $DIR/match-2024-references-fail.rs:6:12
   |
LL |     if let &Some(x) = &mut Some(0) {
   |            ^^^^^^^^   ------------ this expression has type `&mut Option<{integer}>`
   |            |
   |            types differ in mutability
   |
   = note: expected mutable reference `&mut Option<{integer}>`
                      found reference `&_`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
